--- a/index.html
+++ b/index.html
@@ -11,15 +11,19 @@
     <h2>What is your name?</h2>
     <p>
       <!-- TODO(you): Enter your answer here -->
+      林佳宜
     </p>
+  </br>
 
     <h2>What is a fun fact about yourself?</h2>
     <p>
       <!-- TODO(you): Enter your answer here -->
+      我喜歡耍廢。
     </p>
-
+  </br>
+  
     <h2>What do you look like?</h2>
     <!-- TODO(you): Add a picture of yourself or of something that represents yourself. -->
-
+    <img src="./weini.jpg">
   </body>
 </html>
